Fix spacing of learn more

--- a/src/css/Hero.scss
+++ b/src/css/Hero.scss
@@ -223,7 +223,6 @@ html {
     font-size: 0.8em;
     color: $gray;
     text-decoration: none;
-    margin-left: 0.5em;
 
     transition: 0.3s color;
 
